[package]
name = "crawl_city_information"
version = "0.1.0"
edition = "2021"
authors = ["boris <boris.lok.tw@outlook.com>"]

[dependencies]

[dependencies.tokio]
version = "1.15.0"
features = ["full"]

[dependencies.reqwest]
version = "0.11.8"
features = ["tokio-rustls", "serde_json", "json"]

[dependencies.geo]
version = "0.18.0"
features = ["use-serde"]

[dependencies.geojson]
version = "0.22.2"
features = ["geo-types"]

[dependencies.wkb]
version = "0.7.1"

[dependencies.serde]
version = "1.0.133"

[dependencies.serde_json]
version = "1.0.74"

[dependencies.serde_yaml]
version = "0.8.23"

[dependencies.async-trait]
version = "0.1.52"

[dependencies.futures]
version = "0.3.19"

[dependencies.sqlx]
version = "0.5.10"
features = ["postgres", "all-types", "runtime-tokio-rustls"]

[dependencies.sea-query]
version = "0.20.0"
features = ["postgres"]

[dependencies.anyhow]
version = "1.0.52"

[dependencies.thiserror]
version = "1.0.30"

[dependencies.dotenv]
version = "0.15.0"